--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:L2"
         mc:Ignorable="d"
-        Title="Virtual Dougnut Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        Title="Virtual Dougnut Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="Window_Loaded">
     <Grid Margin="0,4,0,-4">
         <Label x:Name="lblTitle" Content="Doughnuts - Bake &amp; Sale" Margin="254,38,231,347" FontWeight="Bold" FontSize="24" RenderTransformOrigin="0.819,0.536"/>
         <GroupBox x:Name="gbRaised" Header="Raised" Margin="169,105,452,207" RenderTransformOrigin="0.797,0.83" FontWeight="Bold">
@@ -45,17 +45,20 @@
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top"
 Width="131" Margin="0,26,0,0">
             <MenuItem Header="File">
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="exitToolStripMenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="_Doughnuts">
                 <MenuItem Header="Make">
                     <MenuItem Header="Raised">
-                        <MenuItem x:Name="glazedMenuItem" Header="Glazed"/>
-                        <MenuItem x:Name="sugarMenuItem" Header="Sugar"/>
+                        <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" Click="glazedToolsStripMenuItem_Click" IsCheckable="True" />
+                        <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" Click="sugarToolsStripMenuItem_Click" IsCheckable="True" />
                     </MenuItem>
                     <MenuItem Header="Filled"/>
                 </MenuItem>
+                <MenuItem x:Name="mnuStop" Header="Stop"
+Click="stopToolStripMenuItem_Click"/>
             </MenuItem>
         </Menu>
     </Grid>
 </Window>
+
